# xmobar-hnakano863

./: .ghci  .gitignore  CHANGELOG.md  README.md  default.nix  flake.nix  shell.nix  xmobar-hnakano863.cabal
app/: ColorPalette.hs  Main.hs
