cabal-version:      2.4
name:               xmobar-hnakano863
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: My xmobar configuration written as a Haskell code.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: MIT

-- The package author(s).
author: hnakano863

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable xmobar-hnakano863
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: ColorPalette

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        data-default ^>=0.7.1.1,
        xmobar ^>=0.37,
        xmonad-contrib ^>=0.16
    hs-source-dirs:   app
    ghc-options: -rtsopts -with-rtsopts=-V0 -threaded
    default-language: Haskell2010
